# yt-watcher

./: Cargo.toml  README.md
.github/: dependabot.yml
src/: discord.rs  main.rs  youtube.rs
