[package]
name = "yt_watcher"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/leis3/yt-watcher.git"
license = "MIT"

[dependencies]
anyhow = "1.0.69"
base64 = "0.21.0"
chrono = "0.4.23"
google-youtube3 = "4.0.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.26.0", features = ["full"] }
yup-oauth2 = "8.1.0"
itertools = "0.10.5"

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = [
    "builder",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend"
]

[dev-dependencies]
mockall = "0.11.3"
pretty_assertions = "1.3.0"
